codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permissions_unnamed_server_profile.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Update Model Permissions


  1. Ask for approval          Read and edit workspace files and run commands, with approval required for internet
                               access or edits outside the workspace
› 2. Approve for me (current)  Only ask for actions detected as potentially unsafe
  3. Full Access               Use with caution: Elpis can edit files outside this workspace and access the internet
                               without approval
  4. Read Only                 Read workspace files, with approval required for edits or internet access

  enter select · esc back
