codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
 Elpis · model gpt-5.4 · location /tmp/project
┌──────────────────────────────────────────────────────────────────────────────┐
│ Select Personality                                                           │
│ Choose a communication style for Codex.                                      │
│                                                                              │
  1. Friendly             Warm, collaborative, and helpful.                    │
› 2. Pragmatic (current)  Concise, task-focused, and direct.                   │
└──────────────────────────────────────────────────────────────────────────────┘
  Press enter to confirm or esc to go back
