codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_draft_footer.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
assertion_line: 76
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5 default · location /tmp/project
────────────────────────────────────────────────┐ CONTEXT LEDGER  ≈50.0k
› make a plan                                   │ tokens in context
────────────────────────────────────────────────┤ Tab controls · Alt+C hide ·
         57% context left · Tab Context Ledger  │ Ctrl+click open file
                                                │
                                                │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  ≈50.0k of
                                                │ 100.0k used (50%)
                                                │   █████████████░░░░░░░░░░░░░
                                                │ Core measured total;
                                                │ category attribution
                                                │ unavailable until the next
                                                │ provider attempt
                                                │
                                                │ No portable context is
                                                │ available.
