codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_local_share_read_only.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 1073
expression: strip_osc8_for_snapshot(&popup)
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Plugins
  Docs · Can be installed · Local
  Data shared with this app is subject to the app's terms of service and privacy policy. Learn more.
  Workspace docs.


› 1. Back to plugins  Return to the plugin list
  2. Install plugin   Install this plugin now
     Source           Local
     Auth             Auth on install
     Version          remote 7
     Sharing          Private · creator Test User · https://chatgpt.com/codex/plugins/share/docs
     Skills           No plugin skills
     Hooks            No plugin hooks
↓
  esc close
